--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ build = "build.rs"
 
 [dependencies]
 winapi = { version = "0.3.9", features = ["handleapi", "psapi", "processthreadsapi", "winnt", "winuser"] }
-clap = { version = "3.0.0-beta.2" }
+clap = { version = "3.0.0-beta.2", optional = true }
+
 
 [build-dependencies]
 winres = "0.1.11"
